example-1/kube/gateway-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.network/example-1-default: "true"
    io.kompose.service: gateway
  name: gateway
spec:
  containers:
    - env:
        - name: NODE_ENV
          value: development
        - name: PORT
          value: "80"
        - name: RABBIT
          value: amqp://guest:guest@rabbit:5672
      image: gateway
      name: gateway
      ports:
        - containerPort: 80
      resources: {}
      volumeMounts:
        - mountPath: /root/.npm
          name: gateway-claim0
        - mountPath: /usr/src/app/src
          name: gateway-claim1
        - mountPath: /usr/src/app/public
          name: gateway-claim2
  restartPolicy: Never
  volumes:
    - name: gateway-claim0
      persistentVolumeClaim:
        claimName: gateway-claim0
    - name: gateway-claim1
      persistentVolumeClaim:
        claimName: gateway-claim1
    - name: gateway-claim2
      persistentVolumeClaim:
        claimName: gateway-claim2
status: {}
