example-1/kube/advertisement-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: advertisement
  name: advertisement
spec:
  ports:
    - name: "4007"
      port: 4007
      targetPort: 80
  selector:
    io.kompose.service: advertisement
status:
  loadBalancer: {}
