example-1/kube/db-fixture-rest-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: db-fixture-rest-api
  name: db-fixture-rest-api
spec:
  ports:
    - name: "9000"
      port: 9000
      targetPort: 80
  selector:
    io.kompose.service: db-fixture-rest-api
status:
  loadBalancer: {}
