example-1/kube/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: db
  name: db
spec:
  ports:
    - name: "27017"
      port: 27017
      targetPort: 27017
    - name: 27017-tcp
      port: 27017
      targetPort: 27017
  selector:
    io.kompose.service: db
status:
  loadBalancer: {}
