example-1/kube/gateway-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: gateway
  name: gateway
spec:
  ports:
    - name: "4000"
      port: 4000
      targetPort: 80
  selector:
    io.kompose.service: gateway
status:
  loadBalancer: {}
