example-1/kube/history-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: history
  name: history
spec:
  ports:
    - name: "4002"
      port: 4002
      targetPort: 80
  selector:
    io.kompose.service: history
status:
  loadBalancer: {}
