example-1/kube/metadata-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: metadata
  name: metadata
spec:
  ports:
    - name: "4006"
      port: 4006
      targetPort: 80
  selector:
    io.kompose.service: metadata
status:
  loadBalancer: {}
