example-1/kube/rabbit-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: rabbit
  name: rabbit
spec:
  ports:
    - name: "5672"
      port: 5672
      targetPort: 5672
    - name: "15672"
      port: 15672
      targetPort: 15672
    - name: 5672-tcp
      port: 5672
      targetPort: 5672
    - name: 15672-tcp
      port: 15672
      targetPort: 15672
  selector:
    io.kompose.service: rabbit
status:
  loadBalancer: {}
