example-1/kube/video-streaming-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: video-streaming
  name: video-streaming
spec:
  ports:
    - name: "4001"
      port: 4001
      targetPort: 80
  selector:
    io.kompose.service: video-streaming
status:
  loadBalancer: {}
