example-1/kube/video-upload-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.28.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: video-upload
  name: video-upload
spec:
  ports:
    - name: "4004"
      port: 4004
      targetPort: 80
  selector:
    io.kompose.service: video-upload
status:
  loadBalancer: {}
